Added icons to social networks links

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </video>
 
     <div id="spotlight">
-        
+
     </div>
 
     <div id="contentContainer">
@@ -21,10 +21,10 @@
         <h2>Próximamente</h2>
         <div id="redesSociales">
             <p>Estámos en</p>
-            <span>
-                <a href="https://www.facebook.com/CERSSmash/"><img src="" alt="Facebook logo"></a>
-                <a href="https://www.instagram.com/cers123/"><img src="" alt="Instagram logo"></a>
-                <a href="https://www.youtube.com/@cerssmash7923"><img src="" alt="Youtube logo"></a>
+            <span id="contenedorRedes">
+                <a href="https://www.facebook.com/CERSSmash/"><img src="./assets/001-facebook.svg" alt="Facebook logo" class="redesIcono"></a>
+                <a href="https://www.instagram.com/cers123/"><img src="./assets/011-instagram.svg" alt="Instagram logo" class="redesIcono"></a>
+                <a href="https://www.youtube.com/@cerssmash7923"><img src="./assets/008-youtube.svg" alt="Youtube logo" class="redesIcono"></a>
             </span>
         </div>
     </div>
@@ -32,6 +32,8 @@
     <div id="footer">
         ©CERS Smash 2023
     </div>
-    <script src="./script.js"></script>
+
+
+   <script src="./script.js"></script>
 </body>
 </html>
