--- a/index.html
+++ b/index.html
@@ -3,9 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>CERS Smash</title>
 
     <link rel="stylesheet" href="./style.css">
+
+    <link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png">
+    <link rel="manifest" href="./site.webmanifest">
+    <link rel="icon" type="image/x-icon" href="./favicon.ico">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
 </head>
 <body>
     <video id="background-video" autoplay loop muted  poster="https://assets.codepen.io/6093409/river.jpg">
@@ -22,9 +30,9 @@
         <div id="redesSociales">
             <p>Estámos en</p>
             <span id="contenedorRedes">
-                <a href="https://www.facebook.com/CERSSmash/"><img src="./assets/001-facebook.svg" alt="Facebook logo" class="redesIcono"></a>
-                <a href="https://www.instagram.com/cers123/"><img src="./assets/011-instagram.svg" alt="Instagram logo" class="redesIcono"></a>
-                <a href="https://www.youtube.com/@cerssmash7923"><img src="./assets/008-youtube.svg" alt="Youtube logo" class="redesIcono"></a>
+                <a href="https://www.facebook.com/CERSSmash/" target="_blank"><img src="./assets/001-facebook.svg" alt="Facebook logo" class="redesIcono"></a>
+                <a href="https://www.instagram.com/cers123/" target="_blank"><img src="./assets/011-instagram.svg" alt="Instagram logo" class="redesIcono"></a>
+                <a href="https://www.youtube.com/@cerssmash7923" target="_blank"><img src="./assets/008-youtube.svg" alt="Youtube logo" class="redesIcono"></a>
             </span>
         </div>
     </div>
