Added Twitter icon

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             <span id="contenedorRedes">
                 <a href="https://www.facebook.com/CERSSmash/" target="_blank"><img src="./assets/001-facebook.svg" alt="Facebook logo" class="redesIcono"></a>
                 <a href="https://www.instagram.com/cers123/" target="_blank"><img src="./assets/011-instagram.svg" alt="Instagram logo" class="redesIcono"></a>
+                <a href="https://twitter.com/CersSmash" target="_blank"><img src="./assets/013-twitter.svg" alt="Twitter logo" class="redesIcono"></a>
                 <a href="https://www.youtube.com/@cerssmash7923" target="_blank"><img src="./assets/008-youtube.svg" alt="Youtube logo" class="redesIcono"></a>
             </span>
         </div>
