Changed background color

--- a/index.html
+++ b/index.html
@@ -25,11 +25,12 @@
  
     <div id="contentContainer">
         <img id="logoCers" src="./assets/logoCers.png" alt="">
-        <h2>Próximamente</h2>
+        <h2 data-info="17/12/2023">Próximamente</h2>
         <div id="redesSociales">
             <p>Estámos en</p>
             <span id="contenedorRedes">
                 <a href="https://www.facebook.com/CERSSmash/" target="_blank"><img src="./assets/001-facebook.svg" alt="Facebook logo" class="redesIcono"></a>
+                <a href="https://www.twitch.tv/cerssmash" target="_blank"><img src="./assets/twitch.svg" alt="Twitch logo" class="redesIcono"></a>
                 <a href="https://www.instagram.com/cers123/" target="_blank"><img src="./assets/011-instagram.svg" alt="Instagram logo" class="redesIcono"></a>
                 <a href="https://twitter.com/CersSmash" target="_blank"><img src="./assets/013-twitter.svg" alt="Twitter logo" class="redesIcono"></a>
                 <a href="https://www.youtube.com/@cerssmash7923" target="_blank"><img src="./assets/008-youtube.svg" alt="Youtube logo" class="redesIcono"></a>
